Fix for default 0